# embedded_systems

./: .gitignore
week2/lights/: CMakeLists.txt
week2/lights/src/: main.c
week3/lights/src/: main.c
week4/lights/src/: main.c
week5/lights/: prj.conf
week5/lights/src/: main.c
week5/parser/: CMakeLists.txt  README.md  TimeParser.cpp  TimeParser.h
week5/parser/RTOS_main_example/: main.c
week5/parser/test_cases/: CMakeLists.txt  TimeParserTest.cpp
week6/: log.html  output.xml  report.html  robot_koodi.robot
week6/robot/: CMakeLists.txt
week6/robot/src/: main.c
